--- a/styles.css
+++ b/styles.css
@@ -80,8 +80,8 @@ nav a:hover {
 .pad-15pct { padding-left: 15%; padding-right: 15%; }
 
 @media (min-width: 900px) {
-  .container-md,
-  .container-lg {
+  .container-lg.text-center,
+  .container-md.text-center {
     padding-left: 6rem;
     padding-right: 6rem;
   }
@@ -186,8 +186,6 @@ h1, h2, h3 { color: #3F8285; }
 @media (max-width: 640px) {
   .profiles {
     flex-direction: column;
-    align-items: flex-start;
-    gap: 2rem;
   }
   .profile-card {
     flex: 1 1 100% !important;
