--- a/styles.css
+++ b/styles.css
@@ -247,18 +247,11 @@ h1, h2, h3 { color: #3F8285; }
   }
 }
 
+/* HUGE padding test for desktop intro boxes */
 @media (min-width: 900px) {
   .container-lg.text-center,
   .container-md.text-center {
-    padding-left: 6rem !important;
-    padding-right: 6rem !important;
-  }
-}
-
-@media (min-width: 1400px) {
-  .container-lg.text-center,
-  .container-md.text-center {
-    padding-left: 9rem !important;
-    padding-right: 9rem !important;
+    padding-left: 15rem !important;
+    padding-right: 15rem !important;
   }
 }
